--- a/Documentación/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/Documentación/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -7,7 +7,7 @@ Aunque contaba con la ventaja de que el lenguaje C\# usado por los scripts de Un
 Formación en técnicas de Unity para hacer diversos elementos, o trucos...
 
 \subsection{Estudio herramientas}
-Uno de los principales puntos de este proyectos ha sido el estudio de diferentes herramientas de realidad aumentada. Para la selección de estas herramientas se siguieron varios pasos. Primero dos de las herramientas de las cuales ya se tenían algunos conocimientos debido a la importancia de las compañías ARCore de Google y ARkit de Apple. Para el resto de herramientas se procedió ha buscar las herramientas mas conocidas y con mayor recepción.
+Uno de los principales puntos de este proyectos ha sido el estudio de diferentes herramientas de realidad aumentada. Para la selección de estas herramientas se siguieron varios pasos. Primero dos de las herramientas de las cuales ya se tenían algunos conocimientos debido a la importancia de las compañías ARCore de Google y ARkit de Apple. Para el resto de herramientas se procedió ha buscar las herramientas que actualmente son mas populares y aquellas que destaquen por sus funcionalidades.
 
 \subsection{Elección Herramienta de realidad aumentada}
 
@@ -23,9 +23,7 @@ Uno de los objetivos del proyecto era el de realizar un aplicación en la que po
 ArCore y Arkit, dada su tecnología eran una de las primeras opciones, pero en el caso de ArKit unicamente esta disponible para dispositivos iOS. Y en el caso de ArCore el número de dispositivos Android compatibles aún es algo limitado.
 En el caso de las aplicaciones de MetaVerse, ZapWorks, WikiTude y 8thWall, se han descartado dado que para para el desarrollo de una aplicación unicamente ofrecen una versión gratuita por un tiempo limitado.
 
-En el caso de OpenCv su limitación, pues ya que en realidad no se trata de una tecnología de realidad aumentada como tal, sino una de reconocimientos...............
-
- que como tecnología de realidad aumentada se queda bastante limitada, y al final no tiene tantas posibilidades como algunas de las otras herramientas.
+En el caso de OpenCv su principal problema es que en comparación con otras herramientas de realidad aumentada, OpenCv se queda limitada en cuanto a sus posibilidades.
 
 Finalmente la decisión estaba entre Kudan y Vuforia. Con kudan que parece ser un software muy prometedor, el problema estaba en que el SDK disponible no fui capaz de funcionara, es probable que se deba a que lleve tiempo sin actualizarse, pues la ultima versión de unity en la que esta testado era la 2018. sumado ha este problema esta también el que no tiene una comunidad muy grande ni una guía muy detallada de uso, por lo que buscar posibles soluciones a dudas o problemas se complicaría bastante.
 Es por esto que finalmente me decante por Vuforia, pues  ofrece la posibilidad de desarrollar gratuitamente, siempre que no se publique con el objetivo comercial. Es compatible 
