--- a/Documentación/tex/6_Trabajos_relacionados.tex
+++ b/Documentación/tex/6_Trabajos_relacionados.tex
@@ -21,7 +21,9 @@ Como podemos ver en la imagen~\ref{fig:Memoria/arWeb8th} nos dejará probar el e
 \subsubsection{Google}
 Google también ofrece algunas características de realidad aumentada, para los móviles compatible con ArCore. Desde hace ya unos meses, al buscar en el navegador del móvil, un animal, Google da la opción de visualizar un modelo 3D de este. En caso de que el móvil sea compatible con ArCore sera posible visualizar ese modelo en realidad aumentada.
 
-IMAGEN
+En la figuara~\ref{fig:Memoria/googleGato} podemos ver el resultado de buscar un ánimal en un dispositivo movil. Si el dispositivo que se usa es compatible con ARCore, cuando tratemos de visualizar el modelo 3D, dará la opción de utilizar la realidad aumentada.
+
+\imagenPequeDos{Memoria/googleGato}{ Resultado de la busqueda de un animal en un dispositivo móvil.}
 
 \subsection{Niantic}
 Niantic~\footnote{\url{https://nianticlabs.com/es/}} se trata de una empresa centrada en el desarrollo de aplicaciones de realidad aumentada. Actualmente sus aplicaciones más conocidas son Ingress, Pokemon Go y HarryPotter wizzards unite.
