--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -52,6 +52,14 @@
 	\end{figure}
 	\FloatBarrier
 }
+\newcommand{\imagenPequeDos}[2]{
+	\begin{figure}%[!h]
+		\centering
+		\includegraphics[width=0.6\textwidth]{#1}
+		\caption{#2}\label{fig:#1}
+	\end{figure}
+	\FloatBarrier
+}
 
 \newcommand{\imagenflotante}[2]{
 	\begin{figure}%[!h]
@@ -369,7 +377,7 @@
 \newcommand{\nombre}{Saúl Martín Ibáñez} %%% cambio de comando
 
 % Datos de portada
-\title{Herramientas de realidad aumentada}
+\title{Estudio de herramientas de realidad aumentada y caso práctico}
 \author{\nombre}
 \tutor{Pedro Luis Sánchez Ortega}
 \cotutor{Álvar Arnaiz González}
@@ -437,24 +445,18 @@ D. Álvar Arnaiz González
 % Abstract en castellano
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
-La realidad aumentada se trata de las técnicas que combinan elementos virtuales con el mundo real.
+Desde hace unas décadas, los avances en la informática han hecho que el mundo real conviva con el virtual, llegando incluso a reemplazarlo en algunas tareas o propósitos. Las técnicas que combinan elementos virtuales con el mundo real se ha denomina realidad aumentada.
 
-En este proyecto se va ha realizar un estudio de diferentes herramientas de realidad aumentada actuales. Se compararán sus distintas funcionalidades, sus pros y contra. Escogiendo cuales de las herramientas estudiadas son las que mas destacan frente al resto. Ademas el estudio se enfocará en como estas herramientas de realidad aumentada pueden usarse para la docencia.
+En este proyecto se va ha realizar un estudio de diferentes herramientas de realidad aumentada actuales. Se compararán sus distintas funcionalidades así como sus pros y contra. Escogiendo cuales de las herramientas estudiadas son las que mas destacan frente al resto. Ademas el estudio se enfocará en cómo estas herramientas de realidad aumentada pueden usarse para la docencia.
 
-La finalidad del proyecto es entender que es la realidad aumentada, cuales son sus ventajas...
+Para completar el Trabajo de Fin de Grado se realizará una aplicación orientada a la docencia, con una de las herramientas estudiadas previamente, en la que poner a prueba sus características. La idea de la aplicación es fomentar nuevas formas de aprendizaje mediante el uso de la realidad aumentada, el ejemplo desarrollado trata de ver el proceso de crecimiento de una planta.
 
-Para completar se realizará una aplicación orientada a la docencia, con una de las herramientas estudiadas previamente, en la que poner a prueba sus características. La idea de la aplicación es fomentar nuevas formas de aprendizaje mediante el uso de la realidad aumentada, el primer ejemplo desarrollado trata de ver el proceso de crecimiento de una planta.
-
-El apk de la aplicación esta disponible  en el repositorio y en DropBox .	
-
-ENLACES:
 
 \end{abstract}
 
 \renewcommand*\abstractname{Descriptores}
 \begin{abstract}
-Realidad aumentada, Unity, Vuforia, Aplicación Android	
-Palabras separadas por comas que identifiquen el contenido del proyecto Ej: servidor web, buscador de vuelos, android \ldots
+Realidad aumentada, Unity, Vuforia, Aplicación Android, herramientas educativas \ldots
 \end{abstract}
 
 \clearpage
